add ui api doc reDoc :)
