# app/Http/Controllers/Post/PostController.php
@@ -23,7 +23,60 @@ class PostController extends Controller
     }
 
     /**
-     * Display a listing of the resource.
+     * @OA\Get(
+     *     path="/blog",
+     *     tags={"Post 📃"},
+     *     summary="Get All Blog",
+     *     @OA\Response(
+     *         response=200,
+     *         description="Get All Blog",
+     *         @OA\JsonContent(
+*                     @OA\Property(
+*                         property="title",
+*                         type="string",
+*                         example="test title"
+*                     ),
+*                     @OA\Property(
+*                         property="description",
+*                         type="string",
+*                         example="description"
+*                     ),
+*                     @OA\Property(
+*                         property="slug",
+*                         type="string",
+*                         example="mona@gmail.com"
+*                     ),
+*                     @OA\Property(
+*                         property="photos",
+*                         type="array",
+*                         @OA\Items(
+*                      type="string",
+*                      example="Url Image"
+)
+*                     ),
+*                     @OA\Property(
+*                         property="created_at",
+*                         type="string",
+*                         example="date"
+*                     ),
+*                     @OA\Property(
+*                         property="category",
+*                         type="string",
+*                         example="category name"
+*                     ),
+*                       @OA\Property(
+*                         property="admin_name",
+*                         type="string",
+*                         example="admin name"
+*                     ),
+*                        @OA\Property(
+*                         property="admin_profile",
+*                         type="string",
+*                         example="admin profile"
+*                     )
+     *         )
+     *     )
+     * )
      */
     public function index()
     {
@@ -35,7 +88,78 @@ class PostController extends Controller
     }
 
     /**
-     * Store a newly created resource in storage.
+     * @OA\Post(
+     *     path="/blog",
+     *     tags={"Post 📃"},
+     *     summary="Create Blog",
+     *     security={{"sanctum" : {}}},
+     *     @OA\Parameter(
+     *         name="Token",
+     *         in="header",
+     *         required=true,
+     *         example="Token Admin"
+     *     ),
+     *     @OA\Parameter(
+     *         name="Show Error",
+     *         in="header",
+     *         required=true,
+     *         example="Accept = application/json"
+     *     ),
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                 @OA\Property(
+     *                     property="title",
+     *                     type="string",
+     *                     example="title ... "
+     *                 ),
+     *                 @OA\Property(
+     *                     property="description",
+     *                     type="string",
+     *                     example="description"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="slug",
+     *                     type="string",
+     *                     example="slug"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="photos",
+     *                     type="array",
+     *                 @OA\Items(
+     *                      type="string",
+     *                      example="File Image"
+     *                 )
+     *               ),
+     *                    @OA\Property(
+     *                      property="category_id",
+     *                      type="integer",
+     *                      example="1"
+     *                 ),
+     *                   @OA\Property(
+     *                      property="admin_id",
+     *                      type="integer",
+     *                      example="1"
+     *                 ),
+     *                 @OA\Property(
+     *                      property="status",
+     *                      type="boolean",
+     *                      example="true Or False"
+     *                 )
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=201,
+     *         description="Create Blog Success Fully :))",
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Bad Request"
+     *     )
+     * )
      */
     public function store(PostStoreRequest $request)
     {
@@ -51,13 +175,6 @@ class PostController extends Controller
      *     path="/blog/{blog_id}",
      *     tags={"Post 📃"},
      *     summary="Get One Blog",
-     *     security={{"sanctum" : {}}},
-     *     @OA\Parameter(
-     *         name="Token",
-     *         in="header",
-     *         required=true,
-     *         example="Token Admin"
-     *     ),
      *     @OA\Response(
      *         response=200,
      *         description="Get One Blog",
